# cookiecutter-fastapi

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  cookiecutter.json  setup.py
.github/: FUNDING.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: Dockerfile  README_GENERATED.md  docker-compose.dev.yml  docker-compose.yml  env.example  pyproject.toml
{{cookiecutter.project_slug}}/app/: db.py  deps.py
{{cookiecutter.project_slug}}/app/api/routes/: api.py  healthcheck.py  predictor.py  tasks.py
{{cookiecutter.project_slug}}/app/core/: config.py  events.py
{{cookiecutter.project_slug}}/app/models/: task.py
{{cookiecutter.project_slug}}/app/schemas/: __init__.py  prediction.py  task.py
{{cookiecutter.project_slug}}/app/services/: ai_service.py  ml_service.py
{{cookiecutter.project_slug}}/tests/: test_basic_api.py  test_events_and_main.py  test_healthcheck.py  test_ml_api.py  test_request_logging.py
